fix order page spacing bug

--- a/frontend/app/styles/main.css
+++ b/frontend/app/styles/main.css
@@ -516,8 +516,8 @@ body {
   background-color: rgba(0, 0, 0, .65);
   margin-top: 100px;
   width: 670px;
-  margin-left: 103px;
-  margin-right: 103px;
+  margin-left: 72px;
+  margin-right: 72px;
   color: white;
   box-sizing: border-box;
   padding: 20px;
